--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "macies-lv-quiz-app",
-  "homepage": "https://kasitis.github.io/macies.lv/",
+  "homepage": "http://www.xn--mcies-fwa.lv/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
